--- a/USERS/details.html
+++ b/USERS/details.html
@@ -31,8 +31,7 @@
       </header>
       <main>
         <section>
-          <div id="loader" class="loader"></div>
-          <div id="card-container"></div>
+         <div id="card-container"></div>
 
         </section>
       </main>
@@ -64,7 +63,8 @@
     
 
     <!--My script-->
-    <script src="./users.js"></script>
+    <script src="/USERS/users.js"></script>
+    <script src="/USERS/details.js"></script>
 
     <!--Icons-->
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
